writer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: writer
  name: writer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: writer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: writer
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/twitter-spam-dev/writer
        imagePullPolicy: ""
        name: writer
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
