website-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: website
spec:
  to:
    kind: Service
    name: website
